# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.32.2
	Martin Väth <martin at mvath.de>:
	- Make eix-functions.sh a program to be used with "eval"

*eix-0.32.1
	Martin Väth <martin at mvath.de>:
	- eix-remote: Use https://github.com/vaeth/quoter/ instead of hacks
	- contrib: reintroduce contrib/mkrelease.sh as a wrapper to git-tag

*eix-0.32.0
	Martin Väth <martin at mvath.de>:
	- eix-diff now requires much less memory:
	  https://bugs.gentoo.org/show_bug.cgi?id=597380
	- Remove DIFF_PRINT_HEADER (package count can no longer be predicted)
	- New database format 37 is guaranteed to be alphabetically sorted
	- Add eix-header -C
	- scripts: fix getopts usage
	- scripts: handle export Bourne shell compatible
	- Fix typos in zsh completion. Thanks to longlene
	- Fix various operator overloads
	- Define some move operations not provided by defaults
	- Remove git helpers; rely on https://github.com/vaeth/git-wrappers-mv

*eix-0.31.10
	Martin Väth <martin at mvath.de>:
	- Avoid redundant newlines in eix -t
	- Add --nowarn to eix and masked-packages
	- Print portage warnings only once, in particular in eix-test-obsolete:
	  https://bugs.gentoo.org/show_bug.cgi?id=593774
	- Always count empty lines for line numbers in errors/warnings
	- Print line numbers for warnings with bad category names
	- eix-sync: Prepend /etc/eix-sync.conf only once, see
	  https://github.com/vaeth/eix/issues/30
	- scripts: speed up ReadBoolean

*eix-0.31.9
	Martin Väth <martin at mvath.de>:
	- scripts: set -f in loops over lines:
	  https://bugs.gentoo.org/show_bug.cgi?id=591422
	- Improve yesno detection (0 or - is false)

*eix-0.31.8
	Martin Väth <martin at mvath.de>:
	- Important change: Add -u for all shell scripts.
	  This can trigger currently hidden bugs ("unbound variable" or
	  "parameter not set" indicate such bugs); please report them if you
	  encounter them. The hope is that in the long run, this step will help
	  to eliminate hidden bugs, although in the moment it can cause pain.