@@ -128,8 +128,7 @@ static void sig_handler(int sig) {
 				"Received SIGSEGV - you probably found a bug in eix.\n"
 				"Please proceed with the following few instructions and help us find the bug:\n"
 				" * install gdb (sys-devel/gdb)\n"
-				" * reemerge eix with FEATURES=\"nostrip\" USE=\"debug\"\n"
-				"   or with FEATURES=\"nostrip\" CXXFLAGS=\"-g -ggdb3\" LDFLAGS=\"\"\n"
+				" * reemerge eix with FEATURES=\"nostrip\" CXXFLAGS=\"-g -ggdb3\" LDFLAGS=\"\"\n"
 				" * enter gdb with \"gdb --args %s your_arguments_for_%s\"\n"
 				" * type \"run\" and wait for the segfault to happen\n"
 				" * type \"bt\" to get a backtrace (this helps us a lot)\n"
